Fix text overflow on active goal menu item

--- a/client/stylesheets/menu_bar.less
+++ b/client/stylesheets/menu_bar.less
@@ -2,6 +2,15 @@
 
 #pop-stack-link, #active-goal-box {
   max-width: 30%;
+}
+
+#active-goal-box {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+#pop-stack-link {
   height: 36px;
 
   .menu-title {
